--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,45 +18,38 @@ code {
 }
 
 .logo {
-  height: 60px;
-  margin: 16px;
+  float: left;
+  width: 120px;
+  height: 42px;
+  margin: 10px 24px 10px 0;
   background: url('https://upload.wikimedia.org/wikipedia/commons/thumb/f/fa/NHS-Logo.svg/200px-NHS-Logo.svg.png');
   background-size: 100% 100%;
 }
 
-.site-layout .site-layout-background {
+.ant-row-rtl #components-layout-demo-top-side-2 .logo {
+  float: right;
+  margin: 16px 0 16px 24px;
+}
+
+.site-layout-background {
   background: #fff;
 }
-  [data-theme="dark"] .site-layout .site-layout-background {
-    background: #141414;
-  }
 
-  .site-form-in-drawer-wrapper {
-    position: absolute;
-    right: 0px;
-    bottom: 0px;
-    width: 100%;
-    padding: 10px 16px;
-    text-align: right;
-    background: #fff;
-    border-top: 1px solid #e9e9e9;
-  }
-
-  .editable-cell {
-    position: relative;
-  }
+.editable-cell {
+  position: relative;
+}
   
-  .editable-cell-value-wrap {
-    padding: 5px 12px;
-    cursor: pointer;
-  }
+.editable-cell-value-wrap {
+  padding: 5px 12px;
+  cursor: pointer;
+}
   
-  .editable-row:hover .editable-cell-value-wrap {
-    padding: 4px 11px;
-    border: 1px solid #d9d9d9;
-    border-radius: 4px;
-  }
+.editable-row:hover .editable-cell-value-wrap {
+  padding: 4px 11px;
+  border: 1px solid #d9d9d9;
+  border-radius: 4px;
+}
   
-  [data-theme='dark'] .editable-row:hover .editable-cell-value-wrap {
-    border: 1px solid #434343;
-  }
+.editable-row:hover .editable-cell-value-wrap {
+  border: 1px solid #434343;
+}
